--- a/src/style.css
+++ b/src/style.css
@@ -163,7 +163,6 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
   align-content: start;
@@ -327,6 +326,14 @@ button:focus-visible {
     padding: 0;
     margin-left: 0.5rem;
   }
+}
+
+.favorite-input {
+  font-size: 1.2em;
+  border: 1px solid #ccc;
+  padding: 0.5em 1em;
+  border-radius: 4px;
+  text-align: center;
 }
 
 .modal-overlay {
