--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 /* Boss Tracker Styles */
-.boss-tracker {
+.boss-tracker, .desktop-tracker {
   background: #181a20;
   border-radius: 12px;
   box-shadow: 0 2px 12px rgba(0,0,0,0.15);
@@ -12,6 +12,28 @@
   align-items: stretch;
   gap: 0.5em;
   overflow-y: scroll;
+}
+
+.desktop-tracker {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1em;
+
+  .tracker-item {
+    flex: 1;
+    margin: 0 0.5em;
+    background: #23262e;
+    border-radius: 8px;
+    padding: 1em;
+    max-width: 300px;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.08);
+
+    ul, li {
+      list-style: none;
+    }
+  }
 }
 
 .boss-tracker h2 {
@@ -392,7 +414,7 @@ button:focus-visible {
 }
 
 .timer-input {
-  width: 100px;
+  width: 70px;
   padding: 0.5em;
   font-size: 1em;
   border: 1px solid #ccc;
@@ -494,13 +516,14 @@ button:focus-visible {
   gap: 1em;
   flex-direction: row;
   flex-wrap: wrap;
-  font-size: 0.9em;
+  font-size: 0.8em;
   align-self: flex-start;
   justify-content: center;
   align-items: flex-start;
   align-content: flex-start;
   margin-top: 1em;
   height: 90vh;
+  overflow-y: scroll;
 
   .column {
     display: flex;
@@ -524,7 +547,7 @@ button:focus-visible {
 
   .timer-input {
     width: 30%;
-    max-width: 100px;
+    max-width: 70px;
     font-size: 1em;
     text-align: center;
     margin-bottom: 1em;
